Bug 1441198 - Part 2 - Fix side spacing and line breaking of items adjacent to the site data description in about:preferences. r=nhnt11
When adding more characters to the description in the site data section,
the display of the adjacent items breaks in two ways:

- The "Learn More" link is pushed to the next line while it should stay
  on the same line as the description. I didn't really find a way to fix
  this while using a XUL label, so I switched to an html:span which has
  the correct layout. I don't see any drawbacks with using a span here.

- The description text could in certain edge cases get too close to the
  "Clear Data" button. To fix that I added a new class which adds some padding.
  This isn't a problem in other parts of preferences except the history
  section (bug 1441138), where I also added this class.

MozReview-Commit-ID: FO5tEx19ZUm

UltraBlame original commit: 86dbf9b038d475000cf7fa62edba8714a60c43b9

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -382,6 +382,55 @@ end
 10px
 ;
 }
+/
+*
+Add
+a
+bit
+of
+space
+to
+the
+end
+of
+descriptions
+to
+*
+leave
+margin
+with
+e
+.
+g
+.
+additional
+buttons
+on
+the
+side
+.
+*
+/
+.
+description
+-
+with
+-
+side
+-
+element
+{
+margin
+-
+inline
+-
+end
+:
+10px
+!
+important
+;
+}
 .
 learnMore
 {
